tests/literal_expr_unicode_diag/expected_diagnostics.txt
grammar.peg:1:10: error: Universal character name requires 4 hex digits.
 1 | Root <- '\u12'
   |          ~~~~
